include/rpc/typing.h

struct rpct_type;
struct rpct_typei;
struct rpct_member;
typedef struct rpct_type *rpct_type_t;
typedef struct rpct_typei *rpct_typei_t;
typedef struct rpct_member *rpct_member_t;
typedef enum {
	RPC_TYPING_STRUCT,		
	RPC_TYPING_UNION,		
	RPC_TYPING_ENUM,		
	RPC_TYPING_TYPEDEF,		
	RPC_TYPING_BUILTIN		
} rpct_class_t;
typedef bool (^rpct_type_applier_t)(rpct_type_t);
typedef bool (^rpct_member_applier_t)(rpct_member_t);
typedef bool (^rpct_interface_applier_t)(rpct_interface_t);
typedef bool (^rpct_if_member_applier_t)(rpct_if_member_t);
#define	RPCT_TYPE_APPLIER(_fn, _arg)					\
	^(rpct_type_t _type) {						\
		return ((bool)_fn(_arg, _type));			\
	}
#define	RPCT_MEMBER_APPLIER(_fn, _arg)					\
	^(rpct_member_t _member) {					\
		return ((bool)_fn(_arg, _member));			\
	}
int rpct_init(void);
int rpct_load_types(const char *path);
const char *rpct_type_get_name(rpct_type_t type);
const char *rpct_type_get_module(rpct_type_t type);
const char *rpct_type_get_description(rpct_type_t type);
rpct_type_t rpct_type_get_parent(rpct_type_t type);
rpct_class_t rpct_type_get_class(rpct_type_t type);
rpct_typei_t rpct_type_get_definition(rpct_type_t type);
int rpct_type_get_generic_vars_count(rpct_type_t type);
const char *rpct_type_get_generic_var(rpct_type_t type, int index);
rpct_type_t rpct_typei_get_type(rpct_typei_t typei);
rpct_typei_t rpct_typei_get_generic_var(rpct_typei_t typei, const char *name);
const char *rpct_typei_get_canonical_form(rpct_typei_t typei);
rpct_typei_t rpct_typei_get_member_type(rpct_typei_t typei,
    rpct_member_t member);
const char *rpct_member_get_name(rpct_member_t member);
const char *rpct_member_get_description(rpct_member_t member);
rpct_typei_t rpct_member_get_typei(rpct_member_t member);
bool rpct_types_apply(rpct_type_applier_t applier);
bool rpct_members_apply(rpct_type_t type, rpct_member_applier_t applier);
rpct_typei_t rpct_new_typei(const char *decl);
rpc_object_t rpct_new(const char *decl, rpc_object_t object);
rpc_object_t rpct_newi(rpct_typei_t typei, rpc_object_t object);
rpct_typei_t rpct_get_typei(rpc_object_t instance);
rpc_object_t rpct_get_value(rpc_object_t instance);