include/rpc/connection.h

struct rpc_connection;
struct rpc_call;
typedef enum rpc_error_code
{
	RPC_INVALID_RESPONSE = 1,	
	RPC_CONNECTION_TIMEOUT,		
	RPC_CONNECTION_CLOSED,		
	RPC_CALL_TIMEOUT,		
	RPC_SPURIOUS_RESPONSE,		
	RPC_LOGOUT,			
	RPC_OTHER			
} rpc_error_code_t;
typedef enum rpc_call_status
{
	RPC_CALL_IN_PROGRESS,		
	RPC_CALL_MORE_AVAILABLE,	
	RPC_CALL_DONE,			
	RPC_CALL_ERROR,			
	RPC_CALL_ABORTED		
} rpc_call_status_t;
typedef struct rpc_connection *rpc_connection_t;
typedef struct rpc_call *rpc_call_t;
typedef void (^rpc_handler_t)(const char *path, const char *interface,
    const char *name, rpc_object_t args);
typedef void (^rpc_error_handler_t)(rpc_error_code_t code, rpc_object_t args);
typedef bool (^rpc_callback_t)(rpc_object_t args, rpc_call_status_t status);
#define	RPC_HANDLER(_fn, _arg) 						\
	^(const char *_path, const char *_iface, const char *_name, 	\
	    rpc_object_t _args) {					\
		_fn(_arg, _path, _iface, _name, _args);			\
	}
#define	RPC_ERROR_HANDLER(_fn, _arg) 					\
	^(rpc_error_code_t _code, rpc_object_t _args) {			\
		_fn(_arg, _code, _args);				\
	}
#define	RPC_CALLBACK(_fn, _arg) 					\
	^(rpc_object_t _args, rpc_call_status_t _status) {		\
		return ((bool)_fn(_arg, _args, _status));		\
	}
rpc_connection_t rpc_connection_create(void *cookie, rpc_object_t params);
int rpc_connection_close(rpc_connection_t conn);
int rpc_connection_subscribe_event(rpc_connection_t conn, const char *path,
    const char *interface, const char *name);
int rpc_connection_unsubscribe_event(rpc_connection_t conn, const char *path,
    const char *interface, const char *name);
void *rpc_connection_register_event_handler(rpc_connection_t conn,
    const char *path, const char *interface, const char *name,
    rpc_handler_t handler);
rpc_object_t rpc_connection_call_sync(rpc_connection_t conn,
    const char *path, const char *interface, const char *method, ...);
rpc_call_t rpc_connection_call(rpc_connection_t conn, const char *path,
    const char *interface, const char *name, rpc_object_t args,
    rpc_callback_t callback);
int rpc_connection_send_event(rpc_connection_t conn, const char *path,
    const char *interface, const char *name, rpc_object_t args);
void rpc_connection_set_event_handler(rpc_connection_t conn,
    rpc_handler_t handler);
void rpc_connection_set_error_handler(rpc_connection_t conn,
    rpc_error_handler_t handler);
int rpc_call_wait(rpc_call_t call);
int rpc_call_continue(rpc_call_t call, bool sync);
int rpc_call_abort(rpc_call_t call);
int rpc_call_success(rpc_call_t call);
int rpc_call_status(rpc_call_t call);
rpc_object_t rpc_call_result(rpc_call_t call);
void rpc_call_free(rpc_call_t call);